# triangulation

./: .gitignore  Cargo.toml  Readme.md
projects/convex/: Cargo.toml  readme.md
projects/convex/src/: lib.rs
projects/convex/src/convex/: mod.rs  solver.rs
projects/convex/src/convex2d/: mod.rs  solver.rs
projects/convex/src/extensions/: mod.rs
projects/convex/src/extensions/shapes/: dim2.rs  mod.rs
projects/convex/src/traits/: dim2.rs  mod.rs  tests.rs
projects/convex/tests/: point.rs  point3d.rs
projects/triangulation/: Cargo.toml  Readme.md
projects/triangulation-web/: Cargo.toml  Readme.md
projects/triangulation-web/tests/: main.rs
projects/triangulation/src/: katex.html  lib.rs
projects/triangulation/src/delaunay2f32/: mod.rs
projects/triangulation/src/delaunay2f64/: mod.rs
projects/triangulation/src/triangulation/: mod.rs
projects/triangulation/src/utils/: mod.rs
projects/triangulation/src/utils/svg/: mod.rs
projects/triangulation/src/utils/with_rand/: mod.rs
projects/triangulation/tests/: main.rs
