[package]
name = "shape-convex"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "The representation projective transformation"
categories = ["mathematics", "graphics"]
keywords = ["math", "projective", "transformation"]
repository = "https://github.com/oovm/shape-rs"
documentation = "https://docs.rs/convex"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
#partition = "0.1.2"
#num-traits = "0.2.15"

[dependencies.shape-core]
version = "0.1.12"
#path = "../shape-core"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/katex.html"]
