[package]
name = "triangulation-web"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]

[dependencies.shape-triangulation]
version = "*"
path = "../triangulation"
features = ["svg", "rand"]

[dev-dependencies]

[features]
default = []
