[package]
name = "shape-triangulation"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "The representation of delaunay triangulation"
categories = ["mathematics"]
keywords = ["math", "delaunay", "triangulation"]
repository = "https://github.com/oovm/triangulation"
documentation = "https://docs.rs/shape-triangulation"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
delaunator = "1.0.2"
shape-core = { version = "0.1.12"}
shape-svg = { version = "0.0.7", optional = true }
rand = { version = "0.8.5", features = ["small_rng"], optional = true }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[features]
default = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/katex.html"]
